--- a/Readme
+++ b/Readme
@@ -1,1 +1,3 @@
-Teste
+# GitHubProfile
+
+An iOS APP that aims to show users of github and their respective individual projects. Data displayed in TableView with the user's profile photo.
